--- a/src/aura/CapacitySchedules/CapacitySchedules.cmp
+++ b/src/aura/CapacitySchedules/CapacitySchedules.cmp
@@ -7,6 +7,7 @@
     <aura:attribute name="formattedDateHeader" type="String"/>
     <aura:attribute name="defaultTeam" type="String" />
     <aura:attribute name="srNetworkTeams" type="Array" />
+    <aura:attribute name="selectedTeam" type="Array" />
     <aura:attribute name="currentUserId" type="String" />
     
     <div class="steelcase">
@@ -25,13 +26,14 @@
             </div>
 
             <!-- Case Request Type picklist -->
-            <div class="slds-form--horizontal slds-text-align--center slds-p-left--xx-large">
+            <div class="slds-form--horizontal slds-text-align--left slds-p-left--xx-large">
                 <div class="slds-picklist slds-dropdown-trigger slds-dropdown-trigger--click">
-                    <lightning:select name="srNetworkTeams" label="Team  " aura:id="srNetworkTeams" value="{!v.defaultTeam}">
-                        <option text="All" value="All"/>
+                    <lightning:select name="srNetworkTeams" label="Team  " aura:id="srNetworkTeams" value="{!v.selectedTeam}">
+                        <option text="{!v.defaultTeam}" value="{!v.defaultTeam}"/>
                         <aura:iteration var="t" items="{!v.srNetworkTeams}">
                             <option text="{!t}" value="{!t}"/>
                         </aura:iteration>
+                        <option text="All" value="All"/>
                     </lightning:select>
                 </div>
             </div>
