--- a/src/aura/CapacitySchedules/CapacitySchedules.cmp
+++ b/src/aura/CapacitySchedules/CapacitySchedules.cmp
@@ -1,6 +1,6 @@
 <aura:component controller="ScheduleController" implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:lightningQuickAction" access="global" >
 	<!--  main component to show all srn users and their schedule__c hours grouped by team -->
-	<aura:handler name="init" action="{!c.doInit}" value="{!this}"/>
+	
     <aura:attribute name="caseRqstTypes" type="Array"/>
     <aura:attribute name="startDate" type="Date"/>
     <aura:attribute name="daysToDisplay" type="Integer"/>
@@ -9,7 +9,11 @@
     <aura:attribute name="srNetworkTeams" type="Array" />
     <aura:attribute name="selectedTeam" type="Array" />
     <aura:attribute name="currentUserId" type="String" />
+
+    <!--  EVENTS -->
+    <aura:handler name="init" action="{!c.doInit}" value="{!this}"/>
     
+    <!--  BODY  -->
     <div class="steelcase" style="width:95%">
         <div class="slds-text-heading--large slds-align--absolute-center slds-m-bottom--large slds-border--bottom slds-box slds-box--small slds-theme--shade slds-text-align--center">Team Schedules</div>
         <div class="slds-grid slds-m-top--small slds-p-bottom--small slds-border--bottom">
@@ -28,7 +32,7 @@
             <!-- Case Request Type picklist -->
             <div class="slds-size--5-of-12 slds-form--horizontal slds-text-align--center slds-p-left--xx-large">
                 <div class="slds-picklist slds-dropdown-trigger slds-dropdown-trigger--click">
-                    <lightning:select name="srNetworkTeams" label="Team  " aura:id="srNetworkTeams" value="{!v.selectedTeam}">
+                    <lightning:select name="srNetworkTeams" label="Team  " aura:id="srNetworkTeams" value="{!v.defaultTeam}">
                         <option text="{!v.defaultTeam}" value="{!v.defaultTeam}"/>
                         <aura:iteration var="t" items="{!v.srNetworkTeams}">
                             <option text="{!t}" value="{!t}"/>
@@ -44,7 +48,7 @@
         </div>
 
         <div class="slds-m-top--small slds-m-bottom--small" style="width:95%">
-            <c:CapacitySchedulesTeams startDate="{!v.startDate}" daysToDisplay="{!v.daysToDisplay}" defaultTeam="{!v.defaultTeam}"/>
+            <c:CapacitySchedulesTeams startDate="{!v.startDate}" daysToDisplay="{!v.daysToDisplay}" defaultTeam="{!v.defaultTeam}" selectedTeam="{!v.selectedTeam}"/>
         </div>
 
 
